--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,74 @@
-.home-container {
+.home-section {
  min-height: calc(100vh - 5em);
+ width: 100vw;
+ position: relative;
+}
+
+.home-container {
+ width: 75%;
+ min-height: 80vh;
+ margin: 0 auto;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+  @media (max-width: 64em) {
+    width: 85%;
+  }
+  @media (max-width: 48em) {
+      flex-direction: column-reverse;
+      width: 100%;
+      &>*:first-child {
+        width: 100%;
+        margin-top: 2rem;
+      }
+  }
+}
+
+.box-home {
+ width: 50%;
+ height: 100;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+}
+
+.cbolao-title {
+ text-align: center;
+ font-family: "Alkalami", serif;
+ color: var(--azul-dark);
+ font-size: 25px;
+}
+
+.cbolao-container {
+ width: 75%;
+ margin: 0 auto;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.title-baianalista {
+ font-size: 3em;
+ text-transform: capitalize;
+ align-self: flex-start;
+ width: 80%;
+ margin: 0 auto;
+}
+
+.subtext-baianalista {
+  font-size: 1.25em;
+  align-self: flex-start;
+  width: 80%;
+  margin: 1rem auto;
+  font-weight: 400;
+}
+
+.subtext-baianalista-light {
+  font-size: 1em;
+  color: var(--gray-100);// uma color cinza
+  align-self: flex-start;
+  width: 80%;
+  margin: 1rem auto;
+  font-weight: 400;
 }
