--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -117,26 +117,52 @@
  line-height: 1.5;
 }
 
+.previa-cbolao2 {
+    position: relative;
+    margin: 0 auto;
+    width: 75%;
+    padding-right: 15px;
+    padding-left: 15px;
+    display: block;
+    justify-content: center;
+    line-height: 1.5;
+   }
+
 .span-cbolao {
  font-size: 25px;
  color: var(--white);
 }
 
-.container-cbolao {
- position: relative;
- padding: 15px;
- max-width: 800px;
- margin: 0 auto;
+.row-cbolao {
+ display: flex;
+ flex-wrap: wrap;
+ padding-top: 30px;
 }
 
-.gallery-wrapper {
- overflow: auto;
+.pt-3 {
+ padding-top: 1rem;
+}
+
+.col-6 {
+ flex: 0 0 50%;
+ max-width: 50%;
+}
+
+.p-rows {
+ color: var(--white);
+}
+
+.container-button {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding-top: 30px;
 }
 
 .button-cbolao {
  border: none;
  color: white;
- background-color: #4CAF50;
+ background-color: #00e8c0;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
@@ -144,4 +170,58 @@
  font-size: 16px;
  border-radius: 5px;
  cursor: pointer;
+}
+
+/*  TALK SHOW  */
+
+.section-talkshow {
+ min-height: 5em;
+ width: 100vw;
+ position: relative;
+ background-color: var(--background);
+ padding-top: 20px;
+}
+
+.box-sobre2 {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+
+.button-redes {
+    display: flex;
+    justify-content: flex-start;
+    aling-items: flex-start;
+    position: relative;
+    left: 500px;
+    gap: 30px;
+}
+
+.button-playtube {
+    border: none;
+    color: white;
+    background-color: #f95959;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;    
+}
+
+.button-playtwitch {
+    border: none;
+    color: white;
+    background-color: #6643b5;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;    
 }
