--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -68,6 +68,8 @@
 
 .inicio-comp {
  font-size: 30px;
+ text-decoration: underline;
+ text-decoration-color: var(--amarelo);
 }
 
 /*    CBOLAO    */
@@ -88,13 +90,14 @@
  justify-content: center;
  align-items: center;
  margin: 1rem auto;
- border-bottom: 2px solid var(--white);
  width: fit-content;
 }
 
 .h1-cbolao {
  font-size: 30px;
  color: var(--white);
+ text-decoration: underline;
+ text-decoration-color: var(--amarelo);  
 }
 
 .h3-cbolao {
@@ -126,7 +129,7 @@
     display: block;
     justify-content: center;
     line-height: 1.5;
-   }
+}
 
 .span-cbolao {
  font-size: 25px;
